--- a/JSPBook/src/main/webapp/WEB-INF/web.xml
+++ b/JSPBook/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,14 @@
 		<error-code>404</error-code>
 		<location>/exceptionNoPage.jsp</location>
 	</error-page>
+	<filter>
+		<filter-name>LogFilter</filter-name>
+		<filter-class>filter.LogFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>LogFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<security-role>
 		<description></description>
 		<role-name>admin</role-name>
