--- a/JSPBook/src/main/webapp/WEB-INF/web.xml
+++ b/JSPBook/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,18 @@
 		<filter-name>LogFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<filter>
+		<filter-name>LogFileFilter</filter-name>
+		<filter-class>filter.LogFileFilter</filter-class>
+		<init-param>
+			<param-name>filename</param-name>
+			<param-value>c:\\logs\\webmarket.log</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>LogFileFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<security-role>
 		<description></description>
 		<role-name>admin</role-name>
